<resources>
    <string name="app_name">Movie Picker</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_now">Register Now</string>
    <string name="email_pass_incorrect">Email or password incorrect!</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign Up</string>
    <string name="have_already_an_account">Have already an account?</string>
    <string name="log_in_now">Log In Now</string>
    <string name="already_exists">This account already exists!</string>
    <string name="new_user_successfully">Account created successfully!</string>
    <string name="completed">All fields should be completed!</string>
    <string name="preference_file_key">authenticate</string>
    <string name="log_out">Log Out</string>
    <string name="create_a_group">Create a group</string>
    <string name="search">Search..</string>
    <string name="watch_together">Let\'s watch a movie together!</string>
    <string name="home">Home</string>
    <string name="my_parties">My Parties</string>
    <string name="what_movie_should_i_see_next">What Movie should I see?</string>
    <string name="all_my_watched_movies">All My Watched Movies</string>
    <string name="options">Options</string>
    <string name="start_new_n_watch_party">Start New\n Watch Party</string>
    <string name="account"><u>Account</u></string>
    <string name="phone"><u>Phone</u></string>
    <string name="get_help"><u>Get Help</u></string>
    <string name="contact_us">Contact Us</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="please_select_five_movies_you_already_watched">Please select five movies you already watched!</string>
    <string name="next">Next</string>
    <string name="you_selected_x_movies">You selected %1$d movies.</string>
    <string name="please_give_us_a_review_for_movies_you_have_picked">Please give us a review for movies you have picked!</string>
    <string name="description"><u>Description</u></string>
    <string name="pick_me">Pick Me!</string>
    <string name="remember">Do you like %1$s?</string>
    <string name="add_review">Please, don\'t forget to give it a review!</string>
    <string name="movie_added">The movie is added</string>
    <string name="please_rate_the_movie_you_just_watched">Please, rate the movie you just watched!</string>
    <string name="we_think_you_have_to_watch_these_movies">We think you have to watch these movies!</string>
    <string name="done">Done</string>
    <string name="thank">Thank you!</string>
    <string name="your_movies">Your Movies</string>
    <string name="add_new_movie_you_watched">Add new movie you watched</string>
    <string name="lang">en</string>
    <string name="description_not_available">Description not available.</string>
    <string name="watch_party_name_is">Watch Party Name is…</string>
    <string name="please_select_at_least_one_movie">Please select at least one movie you watched!</string>
    <string name="do_you_have_a_preference">Do you have a preference?</string>
    <string name="release_year_after">Release Year After:</string>
    <string name="genre">Genre:</string>
    <string name="get_recommendation">GET RECOMMENDATION</string>
    <string name="this_could_take_a_while">This could take a while</string>
    <string name="members">Members:</string>
    <string name="all_your_parties">All your parties</string>
    <string name="movies_history">Movies History:</string>
    <string name="no_movies_yet">No movies yet.</string>
    <string-array name="genres">
        <item>Nothing</item>
        <item>Action</item>
        <item>Adventure</item>
        <item>Animation</item>
        <item>Children</item>
        <item>Comedy</item>
        <item>Crime</item>
        <item>Documentary</item>
        <item>Drama</item>
        <item>Fantasy</item>
        <item>Film-Noir</item>
        <item>Comedy</item>
        <item>Horror</item>
        <item>IMAX</item>
        <item>Musical</item>
        <item>Mystery</item>
        <item>Romance</item>
        <item>Sci-Fi</item>
        <item>Thriller</item>
        <item>War</item>
        <item>Western</item>
    </string-array>

</resources>